# st_axum2

./: Cargo.toml
front_ui/: index.html  package-lock.json  package.json  vite.config.js
src/: main.rs
static/: index.html
static/asset/: index.js
templates/: index.html  page.html
